[package]
name = "skedgy"
version = "0.0.1"
edition = "2021"
license = "MIT"
description = "A simple asynchronous job scheduler"
repository = "https://github.com/klaatu01/skedgy"
documentation = "https://docs.rs/klaatu01/0.0.1/skedgy/"
readme = "README.md"
keywords = ["scheduler", "async", "job", "cron", "task", "schedule"]


[dependencies]
async-channel = "2.3.1"
chrono = "0.4.38"
cron = "0.12.1"
futures = "0.3.30"
humantime = "2.1.0"
log = "0.4.22"
nanoid = "0.4.0"
tokio = { version = "1.40.0", features = ["time", "rt", "macros", "sync"] }
