[workspace]
members = [
    "crates/skedgy", "crates/skedgy-derive",
]

resolver = "2"

[patch.crates-io]
skedgy = { path = "crates/skedgy" }

[workspace.dependencies]
proc-macro2 = { version = "1.0.87", default-features = false }
quote = { version = "1.0.37", default-features = false }
syn = { version = "2.0.79", default-features = false }
