[package]
name = "skedgy-derive"
version = "0.0.2"
edition = "2021"

[lib]
proc-macro = true

[dependencies]
convert_case = "0.6.0"
proc-macro-crate = "3.2.0"
proc-macro2 = { workspace = true, features = ["proc-macro"] }
quote = { workspace = true, features = ["proc-macro"] }
syn = { workspace = true, features = ["clone-impls", "derive", "parsing", "printing", "proc-macro"] }
